--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,11 +10,11 @@
 	  {% endif %}
 	
 	  <div class="form-floating">
-		<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-		<label for="floatingInput">{{ _('Username') }}</label>
+		<input type="email" class="form-control" name="username" id="floatingInput" placeholder="name@example.com">
+		<label for="floatingInput">{{ _('Email') }}</label>
 	  </div>
 	  <div class="form-floating">
-		<input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+		<input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Password">
 		<label for="floatingPassword">Password</label>
 	  </div>
   
